--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "ahooks": "^3.7.7",
     "axios": "^1.3.5",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
