--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.3",
     "ahooks": "^3.7.7",
+    "antd": "^5.6.1",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.8",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
