--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "ahooks": "^3.7.7",
     "antd": "^5.6.1",
     "axios": "^1.3.5",
-    "classnames": "^2.3.2",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "classnames": "^2.3.2",
+    "currency.js": "^2.0.4",
     "dayjs": "^1.11.8",
+    "firebase": "^10.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
