--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
     "classnames": "^2.3.2",
+    "currency.js": "^2.0.4",
     "dayjs": "^1.11.8",
     "esbuild": "^0.18.17",
+    "firebase": "^10.1.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
