--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.5.4",
     "ahooks": "^3.7.7",
     "antd": "^5.6.1",
+    "apexcharts": "^3.41.1",
     "axios": "^1.3.5",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
@@ -35,6 +36,7 @@
     "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
